--- a/index.html
+++ b/index.html
@@ -321,25 +321,29 @@
         
             <div class="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
         </div>
-        <div id="faq" class="hide">
-            <p class="foire">Foire aux questions</p>
-            <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
-            <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que
-                moi, elle est devenu très capricieuse.</p>
-            <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
-            <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de
-                nouvelle choses.</p>
-            <p class="question">Je peux avoir un autographe ?</p>
-            <p class="answer">Vous l'aurez en bas de mon futur contrat.</p>
-            <p class="question">Quel salaire envisagez-vous ?</p>
-            <p class="answer">Je n'en ai pas en tête, suffisament pour pouvoir emmener ma DeLorean à sa révision
-                mensuelle.</p>
-            <p class="question">Avez-vous des qualités principales ?</p>
-            <p class="answer">Je dirait sans hésiter : beau, dans la force de l'âge et sain d'esprit.</p>
-            <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
-            <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une
-                source d'inspiration quotidienne.</p>
-            <p class="atom"><img class="delo" src="https://www.flaticon.com/svg/static/icons/svg/86/86503.svg"></p>
+        <div class="faqWrapper">
+            <div id="faq" class="hide">
+                <div class="titles">
+                    <h2 class="foire">Foire aux questions</h2>
+                </div>
+                <p class="question">Est-ce que je peut conduire la DeLorean ?</p>
+                <p class="answer">Malheureusment après mon dernier voyage, elle ne peut plus accepter personne autre que
+                    moi, elle est devenu très capricieuse.</p>
+                <p class="question">Pourquoi chercher du travail après avoir déjà accompli tant de choses ?</p>
+                <p class="answer">Ayant une soif de connaissance inétenchable, il n'est jamais trop tard pour moi d'apprendre de
+                    nouvelle choses.</p>
+                <p class="question">Je peux avoir un autographe ?</p>
+                <p class="answer">Vous l'aurez en bas de mon futur contrat.</p>
+                <p class="question">Quel salaire envisagez-vous ?</p>
+                <p class="answer">Je n'en ai pas en tête, suffisament pour pouvoir emmener ma DeLorean à sa révision
+                    mensuelle.</p>
+                <p class="question">Avez-vous des qualités principales ?</p>
+                <p class="answer">Je dirait sans hésiter : beau, dans la force de l'âge et sain d'esprit.</p>
+                <p class="question">Existe-t'il encore des personnes qui vous inspirent dans ce monde ?</p>
+                <p class="answer">Philippe Candeloro, réellement je n'ai jamais connu quelqu'un d'aussi exceptionnel, c'est une
+                    source d'inspiration quotidienne.</p>
+                <p class="atom"><img class="delo" src="https://www.flaticon.com/svg/static/icons/svg/86/86503.svg"></p>
+            </div>
         </div>
     
     </footer>
