Finished modifications contact section

--- a/index.html
+++ b/index.html
@@ -257,7 +257,9 @@
         <div id="paralax5" class="paralax-wrapper">
             <section id="contact" class="sections-container">
                 <div class="contact-form">
-                    <h2>Me Contacter</h2>
+                    <div class="titles">
+                        <h2>Me Contacter</h2>
+                    </div>
                     <form class="form">
                         <label for="name">Nom</label>
                         <input type="text" id="name" placeholder="Dupont" class="formulary" required>
@@ -272,7 +274,9 @@
                     </form>
                 </div>
                 <div class="references">
-                    <h2>Références</h2>
+                    <div class="titles">
+                        <h2>Références</h2>
+                    </div>
                     <article class="quote-card">
                         <figure>
                             <img src="Assets/image-Marty.jpeg" alt="picture of marty macfly">
@@ -281,8 +285,9 @@
                             <h3>Marty Macfly</h3>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
                         </div>
+                        <hr>
                     </article>
-                    <hr>
+                    
                     <article class="quote-card">
                         <figure>
                             <img src="Assets/Image-Biff.jpg" alt="picture of marty macfly">
@@ -291,8 +296,9 @@
                             <h3>Biff Tannen</h3>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
                         </div>
+                        <hr>
                     </article>
-                    <hr>
+                    
                     <article class="quote-card">
                         <figure>
                             <img src="Assets/Image-Einstein.jpg" alt="picture of marty macfly">
