working on submit form JS

--- a/index.html
+++ b/index.html
@@ -236,15 +236,15 @@
                     </div>
                     <form class="form" method="GET" action="/">
                         <label for="name">Nom</label>
-                        <input type="text" id="name" placeholder="Dupont" class="formulary">
+                        <input type="text" id="name" placeholder="Dupont" class="formulary" required>
                         <label for="society">Société</label>
-                        <input type="text" id="society" placeholder="Société S.A" class="formulary">
+                        <input type="text" id="society" placeholder="Société S.A" class="formulary" required>
                         <label for="phone">Téléphone</label>
-                        <input type="text" id="phone" placeholder="0601020304" class="formulary">
+                        <input type="text" id="phone" placeholder="0601020304" class="formulary" required>
                         <label for="email">E-mail</label>
-                        <input type="email" id="email" placeholder="nom@email.com" class="formulary">
+                        <input type="email" id="email" placeholder="nom@email.com" class="formulary" required>
                         <label for="message">Votre Message :</label>
-                        <textarea name="message" id="message" placeholder="Message" cols="30" rows="10"></textarea>
+                        <textarea name="message" id="message" placeholder="Message" cols="30" rows="10" required></textarea>
                         <span class="message-success hidden">Votre message a bien été envoyé et sera lu dans les meilleurs délais.</span>
                         <div class="button-container">
                             <button>Envoyer</button>
