--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         </figure>
                         <div>
                             <h3>Marty Macfly</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
+                            <p>Ami et assistant, depuis 1985 il me suis dans toutes mes avantures à travers les époques. Le seul humain en qui j'ai pleinement confiance.</p>    
                         </div>
                         <hr>
                     </article>
@@ -274,7 +274,7 @@
                         </figure>
                         <div>
                             <h3>Biff Tannen</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
+                            <p>Cobaye malgré lui de mes expériences car il se retrouve toujours au travers de ma route, et cela peut importe l'époque.</p>    
                         </div>
                         <hr>
                     </article>
@@ -285,7 +285,7 @@
                         </figure>
                         <div>
                             <h3>Einstein</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti neque magnam od</p>    
+                            <p>Alias "Einie". Mon fidèle compagnon, qui se retrouve souvent impliqué dans mes expériences, mais il n'a pas l'air de s'en plaindre. </p>    
                         </div>
                     </article>
                 </div>
