Fixed footer and FAQ

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </article>
         <div class="infos-container hidden">
             <p><i class="fas fa-map-pin"></i>Hill Valley</p>
-            <p><i class="fas fa-birthday-cake"></i>Octobre 1920</p>
+            <p><i class="fas fa-birthday-cake"></i>Janvier 1914</p>
             <p><a href="tel:+2286270941"><i class="fas fa-tty"></i>+228-627-0941</a></p>
             <p><a href="mailto:emmett.brown@gmail.com"><i class="far fa-envelope-open"></i>emmett.brown@gmail.com</a></p>    
         </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="text">
                     <h2>A Propos</h2>
-                    <p>Je suis naît en 1914 à Hill Valley oú j'y ai passé toute mon enfance. Ma passion pour les sciences me vient à l'âge de onze ans, à la lecture de Vingt mille lieues sous les mers de Jules Verne, ce qui m'amène des années plus tard à passer un doctorat en physique nucléaire. Après la guerre, je retourne dans ma maison, fabriquant des inventions plus ou moins fonctionnelles, comme un casque lecteur de pensées. Le 5 novembre 1955, alors que j'accroche dans mes toilettes une horloge, je tombe sur la tête, et ai la vision du convecteur temporel, invention rendant le voyage dans le temps possible. Le soir même, j'ai confirmation de cette vision en recevant la visite de Marty McFly, arrivé par accident à cette date grâce à la machine à voyager dans le temps que j'inventai des années plus tard.</p>
+                    <p>Je suis né en 1914 à Hill Valley où j'y ai passé toute mon enfance. Ma passion pour les sciences me vient à l'âge de onze ans, à la lecture de Vingt Mille Lieues Sous Les Mers de Jules Verne, ce qui m'amène des années plus tard à passer un doctorat en physique nucléaire. Après la guerre, je retourne dans ma maison, fabriquant des inventions plus ou moins fonctionnelles, comme un casque lecteur de pensées. Le 5 novembre 1955, alors que j'accroche dans mes toilettes une horloge, je tombe sur la tête, et ai la vision du convecteur temporel, invention rendant le voyage dans le temps possible. Le soir même, j'ai confirmation de cette vision en recevant la visite de Marty McFly, arrivé par accident à cette date grâce à la machine à voyager dans le temps que j'inventai des années plus tard.</p>
                 </div>
             </section>
    
@@ -292,20 +292,25 @@
     </main>
 
     <footer>
-        <div class="foot">
+        <div id="paralax6" class="foot paralax-wrapper">
             <ul class="icons">
-                <li class="insta"><a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i
-                            class="fab fa-instagram"></i></a></li>
-                <li class="facebook"><a href="https://github.com/chrislloyd"><i class="fab fa-github"></i></a></li>
-                <li class="linkedin"><a href="https://www.linkedin.com/company/mad-scientist/"><i
-                            class="fab fa-linkedin-in"></i></a></li>
+                <li class="insta">
+                    <a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li class="facebook">
+                    <a href="https://github.com/chrislloyd"><i class="fab fa-github"></i></a>
+                </li>
+                <li class="linkedin">
+                    <a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in"></i></a>
+                </li>
+                <li>
+                    <a href="#faq" class="title-faq" id="faqbtn"><p>F.A.Q</p></a>
+                </li>
+                <li class="top">
+                    <a href="#"><i class="fas fa-arrow-circle-up"></i></a>
+                </li>   
             </ul>
-            <button class="title-faq" id="faqbtn">FAQ <i class="fas fa-angle-double-down" style="color: #122429;"></i></button>
-        
-            <div class="top"><a href="#"><i class="fas fa-arrow-circle-up"></i></a></div>
-        </div>
-        <div class="faqWrapper">
-            <div id="faq" class="hide">
+            <div id="faq">
                 <div class="titles">
                     <h2 class="foire">Foire aux questions</h2>
                 </div>
@@ -327,8 +332,6 @@
                     source d'inspiration quotidienne.</p>
                 <p class="atom"><img class="delo" src="https://www.flaticon.com/svg/static/icons/svg/86/86503.svg" alt="Delorean illustration"></p>
             </div>
-        </div>
-    
     </footer>
 
     <!-- Scripts -->
