Finished fixing anchor callings

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="#experience">Experiences</a></li>
                     <li><a href="#competences">Competences</a></li>
                     <li><a href="#education">Diplomes</a></li>
-                    <li><a href="#contact">Me contacter</a></li>
+                    <li><a href="#contacts">Me contacter</a></li>
                 </ul>
             </div>
         </article>
@@ -46,7 +46,7 @@
                 <li><a href="#experience">Experiences</a></li>
                 <li> <a href="#competences">Competences</a></li>
                 <li><a href="#education">Diplomes</a></li>
-                <li><a href="#contact">Me Contacter</a></li>
+                <li><a href="#contacts">Me Contacter</a></li>
             </ul>
         </nav>
     </header>
@@ -229,7 +229,7 @@
         <div id="paralax5" class="paralax-wrapper">
             <section id="contact" class="sections-container">
                 <div class="contact-form">
-                    <div class="titles">
+                    <div class="titles" id="contacts">
                         <h2>Me Contacter</h2>
                     </div>
                     <form class="form" method="GET" action="/">
@@ -251,7 +251,7 @@
 
                     </form>
                 </div>
-                <div class="references">
+                <div id="references" class="references">
                     <div class="titles">
                         <h2>Références</h2>
                     </div>
