Finished arrow down for mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
             <div id="menu-mobile" class="hidden-desktop hidden">
                 <ul>
-                    <li><a href="#profile">A Propos</a></li>
+                    <li><a href="#about">A Propos</a></li>
                     <li><a href="#experience">Experiences</a></li>
                     <li><a href="#competences">Competences</a></li>
                     <li><a href="#education">Diplomes</a></li>
@@ -42,7 +42,7 @@
         </article>
         <nav id="menu-desktop" class="hidden-mobile">
             <ul>
-                <li><a href="#profile">A Propos</a></li>
+                <li><a href="#about">A Propos</a></li>
                 <li><a href="#experience">Experiences</a></li>
                 <li> <a href="#competences">Competences</a></li>
                 <li><a href="#education">Diplomes</a></li>
@@ -54,10 +54,13 @@
     <main>
         <div id="paralax1" class="paralax-wrapper"> 
             <section id="profile">
+                <div class="downArrow bounce">
+                    <a href="#about"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                </div>
                 <div class="img-container">
                     <img srcset="Assets/portraitDoc.jpeg 320w, Assets/docPortraitLargeScreen.jpg 768w" src="Assets/portraitDoc.jpeg" alt="avatarDoc">
                 </div>
-                <div class="text">
+                <div id="about" class="text">
                     <h2>A Propos</h2>
                     <p>Je suis né en 1914 à Hill Valley où j'y ai passé toute mon enfance. Ma passion pour les sciences me vient à l'âge de onze ans, à la lecture de Vingt Mille Lieues Sous Les Mers de Jules Verne, ce qui m'amène des années plus tard à passer un doctorat en physique nucléaire. Après la guerre, je retourne dans ma maison, fabriquant des inventions plus ou moins fonctionnelles, comme un casque lecteur de pensées. Le 5 novembre 1955, alors que j'accroche dans mes toilettes une horloge, je tombe sur la tête, et ai la vision du convecteur temporel, invention rendant le voyage dans le temps possible. Le soir même, j'ai confirmation de cette vision en recevant la visite de Marty McFly, arrivé par accident à cette date grâce à la machine à voyager dans le temps que j'inventai des années plus tard.</p>
                 </div>
