removed browser outlines on buttons

--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
                     <span></span>
                 <p class="atom"><img class="delo" src="https://www.flaticon.com/svg/static/icons/svg/86/86503.svg" alt="Delorean illustration"></p>
             </div>
+        </div>
     </footer>
 
     <!-- Scripts -->
