external links open new tabs

--- a/index.html
+++ b/index.html
@@ -298,13 +298,13 @@
         <div id="paralax6" class="foot paralax-wrapper">
             <ul class="icons">
                 <li class="insta">
-                    <a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/mrchristopherlloyd/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li class="facebook">
-                    <a href="https://github.com/chrislloyd"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/chrislloyd" target="_blank"><i class="fab fa-github"></i></a>
                 </li>
                 <li class="linkedin">
-                    <a href="https://www.linkedin.com/company/mad-scientist/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/company/mad-scientist/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </li>
                 <li>
                     <a href="#faq" class="title-faq" id="faqbtn"><p>F.A.Q</p></a>
